Report error if string template is used without preview option enabled (#1697)
Improves the fix for #544